fix: add overflow to side nav

--- a/frontend/src/components/BCHeader/styles.scss
+++ b/frontend/src/components/BCHeader/styles.scss
@@ -47,7 +47,7 @@
 
   .spar-side-nav {
     justify-content: space-between;
-
+    overflow-y: auto;
 
     .side-nav-top {
       padding-top: 1rem;
